--- a/Akka.Streams.Kafka.Utils.Tests/Akka.Streams.Kafka.Utils.Tests.csproj
+++ b/Akka.Streams.Kafka.Utils.Tests/Akka.Streams.Kafka.Utils.Tests.csproj
@@ -6,6 +6,10 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <LangVersion>7.3</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
