--- a/Akka.Streams.Kafka.Utils/Akka.Streams.Kafka.Utils.csproj
+++ b/Akka.Streams.Kafka.Utils/Akka.Streams.Kafka.Utils.csproj
@@ -8,6 +8,10 @@
     <PackageTags>akka-streams; kafka</PackageTags>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <LangVersion>7.3</LangVersion>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Akka.Streams.Kafka" Version="1.0.0-beta1" />
   </ItemGroup>
