--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -19,4 +19,4 @@ jobs:
       run: dotnet test Akka.Streams.Kafka.Utils.Tests
     - name: Publish
       run: npm publish
-      if: github.event == 'push' && github.branches == 'master'
+      if: github.event == 'push' && github.ref == 'master'
