--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,5 +17,7 @@ jobs:
       run: dotnet build --configuration Release
     - name: Test with dotnet
       run: dotnet test Akka.Streams.Kafka.Utils.Tests
-    - name: Publish
-      run: npm publish
+    - name: Pack
+      run: dotnet pack --configuration Release
+    - name: Nuget Publish
+      run: dotnet nuget push "bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg" --source "github"
