--- a/nuget.config
+++ b/nuget.config
@@ -8,7 +8,7 @@
     <packageSourceCredentials>
         <github>
             <add key="Username" value="oeaoaueaa" />
-            <add key="ClearTextPassword" value="GITHUB_TOKEN" />
+            <add key="ClearTextPassword" value="${{ secrets.GITHUB_TOKEN }}" />
         </github>
     </packageSourceCredentials>
 </configuration>
