--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Pack
       run: dotnet pack --configuration Release
     - name: Nuget Publish
-      run: dotnet nuget push "Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg" --source "https://nuget.pkg.github.com/oeaoaueaa/Akka.Streams.Kafka.Utils/index.json" --api-key ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet nuget push "Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg" --source "https://nuget.pkg.github.com/oeaoaueaa/Akka.Streams.Kafka.Utils/index.json" --api-key "${{ secrets.GITHUB_TOKEN }}"
