--- a/nuget.config
+++ b/nuget.config
@@ -3,4 +3,13 @@
   <config>
     <add key="defaultPushSource" value="https://nuget.pkg.github.com/oeaoaueaa/index.json" />
   </config>
+  <packageSources>
+    <add key="github" value="https://nuget.pkg.github.com/oeaoaueaa/index.json" />
+  </packageSources>
+  <packageSourceCredentials>
+    <github>
+      <add key="Username" value="oeaoaueaa" />
+      <add key="ClearTextPassword" value="${{secrets.GITHUB_TOKEN}}" />
+    </github>
+  </packageSourceCredentials>
 </configuration>
