--- a/nuget.config
+++ b/nuget.config
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <config>
-    <add key="defaultPushSource" value="https://nuget.pkg.github.com/oeaoaueaa/index.json" />
-  </config>
-  <packageSources>
-    <add key="github" value="https://nuget.pkg.github.com/oeaoaueaa/index.json" />
-  </packageSources>
-  <packageSourceCredentials>
-    <github>
-      <add key="Username" value="oeaoaueaa" />
-      <add key="ClearTextPassword" value="${{secrets.GITHUB_TOKEN}}" />
-    </github>
-  </packageSourceCredentials>
+    <packageSources>
+        <clear />
+        <add key="github" value="https://nuget.pkg.github.com/oeaoaueaa/index.json" />
+    </packageSources>
+    <packageSourceCredentials>
+        <github>
+            <add key="Username" value="oeaoaueaa" />
+            <add key="ClearTextPassword" value="GITHUB_TOKEN" />
+        </github>
+    </packageSourceCredentials>
 </configuration>
