--- a/nuget.config
+++ b/nuget.config
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <clear />
-        <add key="github" value="https://nuget.pkg.github.com/oeaoaueaa/index.json" />
+        <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+        <add key="github" value="https://nuget.pkg.github.com/GITHUB_ACTOR/index.json" />
     </packageSources>
     <packageSourceCredentials>
         <github>
-            <add key="Username" value="oeaoaueaa" />
+            <add key="Username" value="GITHUB_ACTOR" />
             <add key="ClearTextPassword" value="GITHUB_TOKEN" />
         </github>
     </packageSourceCredentials>
