--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,6 +22,8 @@ jobs:
       run: dotnet test Akka.Streams.Kafka.Utils.Tests
     - name: Pack
       run: dotnet pack --configuration Release Akka.Streams.Kafka.Utils
+    - name: Setup NuGet config
+      run: sed 's/GITHUB_TOKEN/${{ secrets.GITHUB_TOKEN }}/g' .nuget.config > nuget.config
     - name: Nuget Publish
       run: dotnet nuget push "Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg" --source "github"
       env:
