--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,10 +25,19 @@ jobs:
       run: dotnet pack --configuration Release Akka.Streams.Kafka.Utils
     - name: Setup NuGet config
       run: sed 's/GITHUB_TOKEN/${{ secrets.GITHUB_TOKEN }}/g' nuget.config > nuget.config    
-    - name: Setup Nuget.exe
-      uses: warrenbuckley/Setup-Nuget@v1
-    - name: Nuget Publish
+    - name: Publish NuGet
+      uses: rohith/publish-nuget@v1.2.0
+      with:
+        # Project (csproj) directory path relative from the root of repository
+        project_dir: . # optional, default is .
+        # Format of the tag to be created, `*` is placeholder for actual version
+        tag_format: v* # optional, default is v*
+        # API key for the NuGet feed
+        nuget_key: ${{ secrets.GITHUB_TOKEN }} # optional
+    #- name: Setup Nuget.exe
+    #  uses: warrenbuckley/Setup-Nuget@v1
+    #- name: Nuget Publish
       # run: dotnet nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg --source "github"
-      run: nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg -Source "github" -SkipDuplicate
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #  run: nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg -Source "github" -SkipDuplicate
+    #  env:
+    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
