--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -29,7 +29,7 @@ jobs:
       uses: rohith/publish-nuget@v1.2.0
       with:
         # Project (csproj) directory path relative from the root of repository
-        project_dir: Akka.Streams.Kafka.Utils\ # optional, default is .
+        project_dir: ./Akka.Streams.Kafka.Utils # optional, default is .
         # Format of the tag to be created, `*` is placeholder for actual version
         tag_format: v* # optional, default is v*
         # API key for the NuGet feed
