--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,19 +25,10 @@ jobs:
       run: dotnet pack --configuration Release Akka.Streams.Kafka.Utils
     - name: Setup NuGet config
       run: sed 's/GITHUB_TOKEN/${{ secrets.GITHUB_TOKEN }}/g' nuget.config > nuget.config    
-    - name: Publish NuGet
-      uses: rohith/publish-nuget@v1.2.0
-      with:
-        # Project (csproj) directory path relative from the root of repository
-        project_dir: ./Akka.Streams.Kafka.Utils # optional, default is .
-        # Format of the tag to be created, `*` is placeholder for actual version
-        tag_format: v* # optional, default is v*
-        # API key for the NuGet feed
-        nuget_key: ${{ secrets.GITHUB_TOKEN }} # optional
-    #- name: Setup Nuget.exe
-    #  uses: warrenbuckley/Setup-Nuget@v1
-    #- name: Nuget Publish
-      # run: dotnet nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg --source "github"
-    #  run: nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg -Source "github" -SkipDuplicate
-    #  env:
-    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Setup Nuget.exe
+      uses: warrenbuckley/Setup-Nuget@v1
+    - name: Nuget Publish
+     # run: dotnet nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg --source "github"
+      run: nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg -Source "github" -SkipDuplicate
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
