--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -27,10 +27,12 @@ jobs:
       run: sed 's/GITHUB_TOKEN/${{ secrets.GITHUB_TOKEN }}/g' nuget.config > nuget.config    
     #- name: Setup Nuget.exe
     #  uses: warrenbuckley/Setup-Nuget@v1
-    - name: Download latest NuGet (cross-platform)
-      uses: olegtarasov/download-nuget@v1
+    - name: Install NuGet client
+      uses: warrenbuckley/Setup-Nuget@v1
+    #- name: Download latest NuGet (cross-platform)
+    #  uses: olegtarasov/download-nuget@v1
     - name: Nuget Publish
      # run: dotnet nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg --source "github"
-      run: /home/runner/work/_temp/nuget.exe push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg -Source "github" -SkipDuplicate
+      run: nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.1.0.0.nupkg -Source "github" -SkipDuplicate
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
