--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -36,6 +36,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Nuget Publish
       # run: dotnet nuget push Akka.Streams.Kafka.Utils/bin/Release/Akka.Streams.Kafka.Utils.*.nupkg --source "github"
-      run: nuget push D:\a\Akka.Streams.Kafka.Utils\Akka.Streams.Kafka.Utils\Akka.Streams.Kafka.Utils\bin\Release\Akka.Streams.Kafka.Utils.1.0.0.1.nupkg -Source "github" -SkipDuplicate -ApiKey ${{ secrets.GITHUB_TOKEN }}
+      run: nuget push D:\a\Akka.Streams.Kafka.Utils\Akka.Streams.Kafka.Utils\Akka.Streams.Kafka.Utils\bin\Release\Akka.Streams.Kafka.Utils.*.nupkg -Source "github" -SkipDuplicate -ApiKey ${{ secrets.GITHUB_TOKEN }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
